<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/copy"
        android:title="@string/copy"
        android:icon="@drawable/ic_action_copy"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/cut"
        android:title="@string/cut"
        android:icon="@drawable/ic_action_cut"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/rename"
        android:title="@string/rename"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/zip"
        android:title="@string/zip"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"/><!--TODO-->
    <item android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/open_with"
        android:title="@string/open_with"
        android:showAsAction="ifRoom"/>
</menu>
