<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/new_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_file"/>

    <EditText
        android:id="@+id/new_file_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:inputType="none|textNoSuggestions|textVisiblePassword"
        android:hint="@string/new_file"
        android:visibility="gone"/>

    <Button
        android:id="@+id/new_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_folder"/>

    <EditText
        android:id="@+id/new_folder_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:inputType="none|textNoSuggestions|textVisiblePassword"
        android:hint="@string/new_folder"
        android:visibility="gone"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_new_file"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel"/>

        <Button
            android:id="@+id/confirm_create"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
